Complete docker multistage build